--- a/partials/header.html
+++ b/partials/header.html
@@ -18,25 +18,10 @@
           <input type="text" class="form-control" placeholder="Search">
         </div>
       </form>
-      <button class="btn btn-info navbar-btn" ng-click="showform=true">
+      <button class="btn btn-info navbar-btn" ng-click="view.showform=true">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Submit Post
       </button>
-      <div class="col-md-4 col-md-offset-4" ng-show="showform">
-        <form novalidate ng-submit="addPost()">
-          <div class="form-group">
-            <label for=""></label>
-            <input type="text">
-          </div>
-          <div class="form-group">
-            <label for=""></label>
-            <input type="text">
-          </div>
-          <div class="form-group">
-            <label for=""></label>
-            <input type="text">
-          </div>        
-        </form>
-      </div>
+
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort By <span class="caret"></span></a>
