cleaning up the structure

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.postSection{
+/*.postSection{
   padding:30px;
 }
 
@@ -7,4 +7,4 @@
   margin-left: 450px;
   margin-top:-220px;
   margin-bottom:30px;
-}
+}*/
