--- a/partials/header.html
+++ b/partials/header.html
@@ -18,7 +18,7 @@
           <input type="text" class="form-control" placeholder="Search">
         </div>
       </form>
-      <button class="btn btn-info navbar-btn" ng-click="view.showform=true">
+      <button class="btn btn-info navbar-btn" ng-click="view.showform=!view.showform">
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Submit Post
       </button>
 
