--- a/partials/allPost.html
+++ b/partials/allPost.html
@@ -6,7 +6,8 @@
       </div>
       <div class="col-md-4">
         <h2>{{post.title}}</h2>
-        <p>{{post.content}}</p>
+        <h4>{{post.author}}</h4>
+        <p>{{post.description}}</p>
         <p>more</p>  
       </div>
     </div>
