--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-/*.postSection{
-  padding:30px;
+.newPost{
+  padding:20px;
 }
-
-.postContent{
-  position:relative;
-  margin-left: 450px;
-  margin-top:-220px;
-  margin-bottom:30px;
-}*/
