--- a/partials/header.html
+++ b/partials/header.html
@@ -19,12 +19,12 @@
         </div>
       </form>
       <button class="btn btn-info navbar-btn" ng-click="view.showform=!view.showform">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Submit Post
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Create Post
       </button>
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort By <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" ng-model="data.option">Sort By <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">votes</a></li>
             <li><a href="#">date</a></li>
