--- a/partials/allPost.html
+++ b/partials/allPost.html
@@ -1,12 +1,24 @@
-<div class="col-md-10 col-md-offset-1" ng-repeat="post in posts">
+<div class="col-md-2 col-md-offset-10">
+  <span>Sort By:</span>
+  <select name="select" ng-model="data.option">
+    <option value="date" ng-selected="true">Date</option>
+    <option value="up">Votes</option>
+    <option value="title">Title</option>
+  </select>
+  <br><br>    
+</div>
+<div class="col-md-10 col-md-offset-1" ng-repeat="post in posts | orderBy:data.option:true">
+
   <div class="thumbnail">
     <div class="container">
       <div class="col-md-5">
         <img ng-src="{{post.url}}">
       </div>
       <div class="col-md-5">
-        <h2>{{post.title}} | <span class="glyphicon glyphicon-arrow-up" ng-click="up=up+1" ng-class="{'positive':up>down && up>0}">{{up}}</span> <span class="glyphicon glyphicon-arrow-down" ng-click="down=down+1" ng-class="{'negative':down>up}">{{down}}</span> </h2>
-        <h4>{{post.author}}</h4>
+        <h2>{{post.title}} | <span class="glyphicon glyphicon-arrow-up" ng-click="post.up = post.up + 1" ng-class="{'positive':post.up>post.down && post.up>0}">{{post.up}}</span> <span class="glyphicon glyphicon-arrow-down" ng-click="post.down=post.down+1" ng-class="{'negative':post.down>post.up && post.down>0}">{{post.down}}</span> </h2>
+        <h4><span class="glyphicon glyphicon-info-sign"></span> By <i>{{post.author}}</i> &nbsp;&nbsp;
+          <span class="glyphicon glyphicon-time"></span> <time>{{post.date | amCalendar }}</time>
+        </h4>
         <p>{{post.description}}</p>
         <p>more</p>  
       </div>
