--- a/partials/header.html
+++ b/partials/header.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search" ng-model="search.input">
         </div>
       </form>
       <button class="btn btn-info navbar-btn" ng-click="view.showform=!view.showform">
